--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -2590,7 +2590,7 @@
 
 ## articles
 ### 2017/03/25 GMT0+8:00 https://newtalk.tw/news/view/2017-03-25/83488
-- <h2><a href="https://newtalk.tw/news/view/2017-03-25/83488" target="_blank">台灣司法三國演義 正上演</a></h2><p>前言：</p><p>經多位司法界人士用心觀察分析，蔡英文主政之後，任用了新的司法院長許宗力、法務部長邱太三、國安諮詢委員林峰正、及大法官等多人之後，整個台灣的司法勢力和權力結構起了強烈「洗牌」的效用，以往，司法院長一言九鼎之尊，已完全不復存在，司法高層權力「結構」因為大批「新權貴」進場，產生重大分裂和重組，其間產生的變化與局勢，據法界人士形容，和東漢末年的董卓帶領「西涼軍」進京「廢少帝立獻帝」，以及後來發展出來的「三國」關係，頗為神似！</p><p>上述歷史典故（廢少帝立獻帝）被引用，是去年總統府已發諮文提名謝文定當院長，但遭「司改基金會」動員各界力量硬是換下謝文定，改成許宗力，頗像東漢末年之「廢少帝立獻帝」；巧合的是，許宗力上任之後，他和蔡英文成為類似東漢末年的「中樞勢力」。而「司法改革基金會」則成了類似董卓帶領的「西涼軍團」。</p><p>又，司法院秘書長呂「太」郎，唯恐無法掌權，乃出奇招，結合法務部長邱「太」三，兩人利用院檢合作發展出「雙太合體（太三，太郎）」，成為另外一股新興勢力。如此一來，台灣司法權力的分佈和縱橫關係，就顯得很像東漢末年出現的「三國」關係。根據司法官場資深人士深入解析，認為未來司法權力將由這「三股勢力」分別把持。這三股勢力依其「特性」和「人物姓名簡稱」，大致上可以分別加以「簡稱」並介紹如下：</p><p>A：「英宗中樞」：主要就是「總統蔡英文」和「司法院長許宗力」他們兩人雖然是國家最高領導人和五院院長，但在重要的權力運作上其實都已經「旁落」，旁落的權力，若不是落在「司改會」手上，就是落在「司法院內部」與司改會結合的「法官」手上。</p><p>B：「西涼軍團」：真正掌握「司法權力」的「萬國集團」與「民間司改會」之「西涼軍團」，擁有驚人的司法和政治實力，司改會原本就已順利達成「權力一條龍」，經過新政權上任之後，重新佈局之後，顯得更是顯赫。舉凡時代力量的林峰正（現任國安諮詢委員）、中研究的瞿海源、前大法官許玉秀、現任司法院副院長蔡炯燉、高院法官林孟皇、司改會執行長高榮志，都是西涼軍團的主要成員，他們的戰力與勝利品，不斷增長。值得注意的是，民間司改會董事長林永頌，似乎在內部權力鬥爭中，因為同性婚問題，被解除權力，遭到邊緣化，有一段時間很少看到他出面主導新聞。</p><p>C：「雙太合體」：就在「西涼軍團」大批勢力進駐司法高層，以及「英宗中樞」無法充份掌權之後，冷眼一旁盯著權力結構改組的司法院秘書長呂太郎，發現最佳的權力結合伙伴就在「隔壁」─司法院緊鄰的「法務部」部長邱太三，於是，兩位「太字」兄弟，重溫舊日革命感情，「雙太」迅速私下聯手達成默契，一個在院方，一個在檢方，兩人以「院檢合作」為名，聯手一起出招，伺機在政治上或是司法上，進一步擁有更多實力和權力。</p><p>綜合司法院以及法務部等部門多位資深官員的分析，最早他們只是覺得「許宗力」院長很像東漢末年的「漢獻帝」，許宗力上台之後，很多人事決策，幾乎都是在被挾持的情況下，聽令「民間司改會」那一小撮人！</p><p>但這些資深官員再耐心觀察一段時間之後，慢慢發現，許宗力並不是完全被挾持（西涼軍團），而是司法高層的權力鬥爭，正在不斷分裂重組，很像異形入侵，依附在宿主身上之後，它本身也會改變出現形態與形貌。</p><p>因此，司法院的官員開始重新觀察，最後，多位官員認定，台灣司法的權力結構已經產生空前未有之「鉅變」，未來主導司法權力（人事）的將是三股力量的「不斷角力」，這三股力量將會有很多很多的「暗鬥和過招」，且最後的呈現出檯面的「結果」，一定都是這三股勢力的較勁之後「表面上」得到的和諧，但真正的角力將是永無停止。</p><p>在未來的權力結構中，首先要介紹的當然還是以「中樞勢力」為主。司法院長許宗力因為「西涼軍團」的力推，而得以「坐上」司法院長寶座，但是，西涼軍團也不是省油的燈，其實，「西涼軍團」是為了推他們的「自己人」─蔡炯燉當副院長，才會找許宗力陪榜。在這「廢少帝立獻帝」的過程中，許宗力雖然是一介書生，但他也有他的官癮，當上司法院長之後，他開會經常強調，他是院長，也是首席大法官，從這種口氣就可以聞出，他對「西涼軍團」並不想唯唯諾諾，他是礙於西涼軍團的政治實力（例如：有一法官評鑑案，當事人要求出席人審會當面答辯，許宗力則以：不要得罪司改會，那是他們移送的案子。就不讓被評鑑法官出席人審會答辯，其實這是完全違反程序正義的），因此，許宗力就盡量採取迥迂策略，小事情多讓步，大事情儘量自己介入，所謂的大事情，首重「人事權」的掌握，其他的細節則是慢慢等待機會。</p><p>許宗力積極部署  安插親信為要務</p><p>因此，司法院的「人事處長」蔡新毅法官，就是百分之百許宗力的心腹。「人事權」是司法最大的權力源頭。而司法院的「人事處長」則是所有人事權的精緻體現與落實戒嚴時期只要坐上司法院「人事處長」位子，就等於收到等著外派當院長的「保證書」。現任秘書長呂太郎就是當年擔任過人事處長，跟著翁岳生院長學習官場功力，協助翁岳生鬥掉大批萬年庭長，並處理很多不為人知的「人事」，才能一路扶搖而上。現任監委林雅鋒，也是因為擔任過司法院人事處長，就一路官運亨通，從考試委員再升官到監察委員，離開法官職位後，就一直都在當好缺的官。現任法官學院院長周占春，也是當過人事處長，許宗力一上任就找他去當法官學院院長。司法院人事處長的重要性與未來性（升官），從上述案例就可看出。</p><p>「人事處長」一定要找「體己人」，體己人一詞，語出紅樓夢，意指：能不用長官開口，就能體會長官心意的人，許宗力院長在這一點是把握到了真正的要訣。許宗力目前在佈署自己人和培養實力方面，除了「人事處長」之外，他的人馬並不多，頂多只有法官學院院長周占春、二審法官錢建榮、副秘書長林勤純幾位，但，林勤純已經被秘書長呂太郎刻意加以「邊緣化」，將其定位百分之百的「事務官」，儘量不讓他接觸「政務」，因此，多數時間林勤純是被掠著的。</p><p>許宗力的人馬不僅少，而且，他私交最好的最高法院院長鄭玉山，偏偏，又是藍色色彩太過濃厚，聽說，「英宗中樞」的小英層峰，已經明白告訴許宗力，最高法院院長鄭玉山必須換人，時程可以讓許宗力自己選擇，但是，一定要執行。</p><p>司改委員整盤拿 許宗力只能默認</p><p>「英宗中樞」的「英」，才是真正老闆，至於「宗」，還是伙計，老闆開口，許宗力只有聽令的份。根據一次司法院的內部會議之與會人士透露，有一次開會結束時，最高法院院長鄭玉山突然冒出一句，反正我要退休的人了！許宗力一聽到這話，也馬上補了一句，我又沒有要你退休！</p><p>根據與會人員形容，這種「對話」在司法院長和最高法院院長之間出現，必是另有政治隱情在內。話說回來，許宗力院長目前雖然「人馬少」，但也不是沒用心在「佈建」自己的人馬。</p><p>最明顯的例子就是司法行政廳長一缺，原本，秘書長呂太郎是想推薦他的人─基隆地院院長蔡名曜，聽說，蔡院長都已經出門，要到司法院接受大院長召見與面試了，卻車在半途，突然接到電話，告知不用來了。</p><p>因為，許宗力想要慢慢掌握司法院長的權力，必須找個直接聽令於他，而不是私下又會和秘書長咬耳朵的人，因此，才有臨時的王梅英廳長之出任。司法行政廳的職掌業務，幾乎囊括司法院行政權的主要項目，其中，還包括法官的考績。</p><p>綜合上述情事，可以約略得知，現任司法院長許宗力雖然享有官場風光的一面，但是，也有他的無力感以及他想要突破的企圖心。</p><p>許宗力面對「西涼軍團」的勢力，一向是聽令居多，最明顯的例子就是司改委員名單公佈後，全國律師公會反彈，許宗力出面承擔罵名，事實上，那些名單幾乎都是西涼軍團在決定，許宗力多數時間是「被告知」，但是，反彈罪名卻是他在承擔，原因是，目前他真的招惹不起「西涼軍團」。</p><p>西涼軍團實力悍</p><p>連監委都有提名「西涼軍團」的實力，也確實不容小覷。司法院內部，有一位副手，也就是副院長蔡炯燉坐在旁邊，外部，更是重兵集結，舉凡：中研院的瞿海源、蔡英文身邊的國安諮詢委員林峰正、前大法官許玉秀、高院林孟皇法官、這些人都是一出面，就能輕易取得媒體版面報導的狠角色，只要他們一聯手，真的就能壓的他動彈空間快速縮小。甚至，背後還有一個「法官協會」，三不五時，還會給他發個新聞稿，暗地戳他兩下，給他難過。不過，西涼軍團也不是事事順利，副院長蔡炯燉一上任之後，就一直找機會，想要出招安排他的人事。</p><p>最明顯的案例有二。</p><p>一個是蔡炯燉想要安排一位「鬧過緋聞」的法官，來擔任司法行政廳長。結果，該提議一出，當過人事處長的呂太郎秘書長，趕緊找出「不宜」（緋聞）的資料，上呈院長許宗力，才將蔡炯燉的心願收拾起來。</p><p>許宗力、瞿海源 聯手封殺陪審？</p><p>第二個案例是，蔡炯燉多次提議，應該安排前大法官許玉秀進入司法院的體制內，擔任類似書類審查委員的職務等等，結果，也是呂太郎秘書長開會時當面告知，司法院本身已有的建制，並沒有實現副院長提議的空間，蔡炯燉副院長連續兩次踢到鐵板之後，才開始減少野心。</p><p>加上，蔡炯燉急於表現，一上任大法官就撰寫釋憲文章，給自己鬧了笑話，也就更加節制了。三國關係永遠分分合合，不足為奇，表面上看，許宗力和西涼軍團是存有矛盾，但是，這種矛盾並非永遠如此。例如：許宗力是反對陪審團制度的，他認為在台灣推動「陪審團」，就像在沙漠種玫瑰，雖然此話引來不少反對聲浪，但，司改國是會議籌備委員會副召集人瞿海源就公開呼應許宗力的反對立場，瞿說「不可能馬上就通過陪審，那整個就大地震了」，他預判很難會通過陪審辦法。瞿海源接受廣播專訪說，陪審、參審的議題，放在國是會議第四分組會議討論；過去民間司改會，甚至司法院都曾舉辦過很多研討會，討論很久，沒有定論；從民調來看，民意也沒有顯示出支持陪審制的人較多。有關民調數字，瞿的說法不實在。但從此也可看出，瞿寧可說話不實，也要力挺許宗力反對陪審團的立場則是明確的。瞿海源還說，很多人是從電影看到陪審制，但執行陪審制的國家比較少；陪審制與台灣現有的司法體制吻合度很低，「那變成是革命了」。</p><p>言下之意，台灣司法並不需要革命就能改善，這一點也是和國人的阿計有相當的落差。國人面對司法不公，殷殷期盼的就是政黨輪替之後，可以來一場有如革命般的司法改革。看來，許宗力和瞿海源就推動「陪審制」議題，是已經站在同一戰線，明顯打算聯手封殺陪審制，國是改革會議第四組的主持人許玉秀，應該是用來「誘蛇出洞」，讓張靜律師在該組大鳴大放之後，再以全組表決不通過，封殺陪審制。就陪審團議案來看，「英宗中樞」和「西涼軍團」是分分合合，隨時會有變化的。</p><p>也正因為這種分分合合的不穩定性，對於多年來浸淫司法官場且一路升官的呂太郎而言，他就必須自謀出路。</p><p>邱太三、呂太郎 結盟新勢力</p><p>秘書長呂太郎和法務部長邱太三，兩人都是深厚的「台中」地緣，有人戲稱他們兩人是「台中幫」，1993年12月，台中地院303室的法官林志忠、呂太郎、林輝煌、陳漢洲等人召開記者會，要求事務分配回歸法官會議，開了「法官自治運動」的第一槍。邱太三則是在台中地區參選，現算是司法台中幫的龍頭。</p><p>有人認為，「雙太合體」是面對「西涼軍團」強勢主導司法權力之下，不得不的結合，因為呂太郎不願意成為「司法三公」（院長、副院長、秘書長）的「孤鳥」，但是，又打不進「英宗中樞」或是「西涼軍團」的任何一方，所以，一定要開發自己的地盤，那就是「雙太合體」最為實際且實用。</p><p>而「雙太合體」這種結合，對邱太三而言，也是美事一樁，不久前，邱太三特別安排政次陳明堂，代表法務部負責和司法院擔任「對口單位」，院方看到邱太三的主張，也就指定副秘書長林勤純做為對口人選，陳明堂為了建立對口交情，還特別安排了總長顏大和以及多位法務部主管和林勤純一起吃飯。其實，如果了解「雙太合體」之情勢，就可以了解，陳明堂和林勤純的對口單位「安排」根本就是表面假象。院檢之間的「真正對口」，根本的是「秘書長」和「部長」兩人之間的隨時順暢熱線。</p><p>我國司法「三國演義」的正式成形與登場之第一齣大戲演出，應該就屬司法改革國是會議，這場大戲的巧妙演出，也可以看出三國關係的微妙互動與變化。#法治時報封面故事</p><p>評論屬投書者個人言論，不代表本刊立場。</p> #法治時報 #其他 #議事程序 #新頭殼 #2017-03-25
+- <h2><a href="https://newtalk.tw/news/view/2017-03-25/83488" target="_blank">台灣司法三國演義 正上演</a></h2><p>前言：</p><p>經多位司法界人士用心觀察分析，蔡英文主政之後，任用了新的司法院長許宗力、法務部長邱太三、國安諮詢委員林峰正、及大法官等多人之後，整個台灣的司法勢力和權力結構起了強烈「洗牌」的效用，以往，司法院長一言九鼎之尊，已完全不復存在，司法高層權力「結構」因為大批「新權貴」進場，產生重大分裂和重組，其間產生的變化與局勢，據法界人士形容，和東漢末年的董卓帶領「西涼軍」進京「廢少帝立獻帝」，以及後來發展出來的「三國」關係，頗為神似！</p><p>上述歷史典故（廢少帝立獻帝）被引用，是去年總統府已發諮文提名謝文定當院長，但遭「司改基金會」動員各界力量硬是換下謝文定，改成許宗力，頗像東漢末年之「廢少帝立獻帝」；巧合的是，許宗力上任之後，他和蔡英文成為類似東漢末年的「中樞勢力」。而「司法改革基金會」則成了類似董卓帶領的「西涼軍團」。</p><p>又，司法院秘書長呂「太」郎，唯恐無法掌權，乃出奇招，結合法務部長邱「太」三，兩人利用院檢合作發展出「雙太合體（太三，太郎）」，成為另外一股新興勢力。如此一來，台灣司法權力的分佈和縱橫關係，就顯得很像東漢末年出現的「三國」關係。根據司法官場資深人士深入解析，認為未來司法權力將由這「三股勢力」分別把持。這三股勢力依其「特性」和「人物姓名簡稱」，大致上可以分別加以「簡稱」並介紹如下：</p><p>A：「英宗中樞」：主要就是「總統蔡英文」和「司法院長許宗力」他們兩人雖然是國家最高領導人和五院院長，但在重要的權力運作上其實都已經「旁落」，旁落的權力，若不是落在「司改會」手上，就是落在「司法院內部」與司改會結合的「法官」手上。</p><p>B：「西涼軍團」：真正掌握「司法權力」的「萬國集團」與「民間司改會」之「西涼軍團」，擁有驚人的司法和政治實力，司改會原本就已順利達成「權力一條龍」，經過新政權上任之後，重新佈局之後，顯得更是顯赫。舉凡時代力量的林峰正（現任國安諮詢委員）、中研究的瞿海源、前大法官許玉秀、現任司法院副院長蔡炯燉、高院法官林孟皇、司改會執行長高榮志，都是西涼軍團的主要成員，他們的戰力與勝利品，不斷增長。值得注意的是，民間司改會董事長林永頌，似乎在內部權力鬥爭中，因為同性婚問題，被解除權力，遭到邊緣化，有一段時間很少看到他出面主導新聞。</p><p>C：「雙太合體」：就在「西涼軍團」大批勢力進駐司法高層，以及「英宗中樞」無法充份掌權之後，冷眼一旁盯著權力結構改組的司法院秘書長呂太郎，發現最佳的權力結合伙伴就在「隔壁」─司法院緊鄰的「法務部」部長邱太三，於是，兩位「太字」兄弟，重溫舊日革命感情，「雙太」迅速私下聯手達成默契，一個在院方，一個在檢方，兩人以「院檢合作」為名，聯手一起出招，伺機在政治上或是司法上，進一步擁有更多實力和權力。</p><p>綜合司法院以及法務部等部門多位資深官員的分析，最早他們只是覺得「許宗力」院長很像東漢末年的「漢獻帝」，許宗力上台之後，很多人事決策，幾乎都是在被挾持的情況下，聽令「民間司改會」那一小撮人！</p><p>但這些資深官員再耐心觀察一段時間之後，慢慢發現，許宗力並不是完全被挾持（西涼軍團），而是司法高層的權力鬥爭，正在不斷分裂重組，很像異形入侵，依附在宿主身上之後，它本身也會改變出現形態與形貌。</p><p>因此，司法院的官員開始重新觀察，最後，多位官員認定，台灣司法的權力結構已經產生空前未有之「鉅變」，未來主導司法權力（人事）的將是三股力量的「不斷角力」，這三股力量將會有很多很多的「暗鬥和過招」，且最後的呈現出檯面的「結果」，一定都是這三股勢力的較勁之後「表面上」得到的和諧，但真正的角力將是永無停止。</p><p>在未來的權力結構中，首先要介紹的當然還是以「中樞勢力」為主。司法院長許宗力因為「西涼軍團」的力推，而得以「坐上」司法院長寶座，但是，西涼軍團也不是省油的燈，其實，「西涼軍團」是為了推他們的「自己人」─蔡炯燉當副院長，才會找許宗力陪榜。在這「廢少帝立獻帝」的過程中，許宗力雖然是一介書生，但他也有他的官癮，當上司法院長之後，他開會經常強調，他是院長，也是首席大法官，從這種口氣就可以聞出，他對「西涼軍團」並不想唯唯諾諾，他是礙於西涼軍團的政治實力（例如：有一法官評鑑案，當事人要求出席人審會當面答辯，許宗力則以：不要得罪司改會，那是他們移送的案子。就不讓被評鑑法官出席人審會答辯，其實這是完全違反程序正義的），因此，許宗力就盡量採取迥迂策略，小事情多讓步，大事情儘量自己介入，所謂的大事情，首重「人事權」的掌握，其他的細節則是慢慢等待機會。</p><p>許宗力積極部署  安插親信為要務</p><p>因此，司法院的「人事處長」蔡新毅法官，就是百分之百許宗力的心腹。「人事權」是司法最大的權力源頭。而司法院的「人事處長」則是所有人事權的精緻體現與落實戒嚴時期只要坐上司法院「人事處長」位子，就等於收到等著外派當院長的「保證書」。現任秘書長呂太郎就是當年擔任過人事處長，跟著翁岳生院長學習官場功力，協助翁岳生鬥掉大批萬年庭長，並處理很多不為人知的「人事」，才能一路扶搖而上。現任監委林雅鋒，也是因為擔任過司法院人事處長，就一路官運亨通，從考試委員再升官到監察委員，離開法官職位後，就一直都在當好缺的官。現任法官學院院長周占春，也是當過人事處長，許宗力一上任就找他去當法官學院院長。司法院人事處長的重要性與未來性（升官），從上述案例就可看出。</p><p>「人事處長」一定要找「體己人」，體己人一詞，語出紅樓夢，意指：能不用長官開口，就能體會長官心意的人，許宗力院長在這一點是把握到了真正的要訣。許宗力目前在佈署自己人和培養實力方面，除了「人事處長」之外，他的人馬並不多，頂多只有法官學院院長周占春、二審法官錢建榮、副秘書長林勤純幾位，但，林勤純已經被秘書長呂太郎刻意加以「邊緣化」，將其定位百分之百的「事務官」，儘量不讓他接觸「政務」，因此，多數時間林勤純是被掠著的。</p><p>許宗力的人馬不僅少，而且，他私交最好的最高法院院長鄭玉山，偏偏，又是藍色色彩太過濃厚，聽說，「英宗中樞」的小英層峰，已經明白告訴許宗力，最高法院院長鄭玉山必須換人，時程可以讓許宗力自己選擇，但是，一定要執行。</p><p>司改委員整盤拿 許宗力只能默認</p><p>「英宗中樞」的「英」，才是真正老闆，至於「宗」，還是伙計，老闆開口，許宗力只有聽令的份。根據一次司法院的內部會議之與會人士透露，有一次開會結束時，最高法院院長鄭玉山突然冒出一句，反正我要退休的人了！許宗力一聽到這話，也馬上補了一句，我又沒有要你退休！</p><p>根據與會人員形容，這種「對話」在司法院長和最高法院院長之間出現，必是另有政治隱情在內。話說回來，許宗力院長目前雖然「人馬少」，但也不是沒用心在「佈建」自己的人馬。</p><p>最明顯的例子就是司法行政廳長一缺，原本，秘書長呂太郎是想推薦他的人─基隆地院院長蔡名曜，聽說，蔡院長都已經出門，要到司法院接受大院長召見與面試了，卻車在半途，突然接到電話，告知不用來了。</p><p>因為，許宗力想要慢慢掌握司法院長的權力，必須找個直接聽令於他，而不是私下又會和秘書長咬耳朵的人，因此，才有臨時的王梅英廳長之出任。司法行政廳的職掌業務，幾乎囊括司法院行政權的主要項目，其中，還包括法官的考績。</p><p>綜合上述情事，可以約略得知，現任司法院長許宗力雖然享有官場風光的一面，但是，也有他的無力感以及他想要突破的企圖心。</p><p>許宗力面對「西涼軍團」的勢力，一向是聽令居多，最明顯的例子就是司改委員名單公佈後，全國律師公會反彈，許宗力出面承擔罵名，事實上，那些名單幾乎都是西涼軍團在決定，許宗力多數時間是「被告知」，但是，反彈罪名卻是他在承擔，原因是，目前他真的招惹不起「西涼軍團」。</p><p>西涼軍團實力悍</p><p>連監委都有提名「西涼軍團」的實力，也確實不容小覷。司法院內部，有一位副手，也就是副院長蔡炯燉坐在旁邊，外部，更是重兵集結，舉凡：中研院的瞿海源、蔡英文身邊的國安諮詢委員林峰正、前大法官許玉秀、高院林孟皇法官、這些人都是一出面，就能輕易取得媒體版面報導的狠角色，只要他們一聯手，真的就能壓的他動彈空間快速縮小。甚至，背後還有一個「法官協會」，三不五時，還會給他發個新聞稿，暗地戳他兩下，給他難過。不過，西涼軍團也不是事事順利，副院長蔡炯燉一上任之後，就一直找機會，想要出招安排他的人事。</p><p>最明顯的案例有二。</p><p>一個是蔡炯燉想要安排一位「鬧過緋聞」的法官，來擔任司法行政廳長。結果，該提議一出，當過人事處長的呂太郎秘書長，趕緊找出「不宜」（緋聞）的資料，上呈院長許宗力，才將蔡炯燉的心願收拾起來。</p><p>許宗力、瞿海源 聯手封殺陪審？</p><p>第二個案例是，蔡炯燉多次提議，應該安排前大法官許玉秀進入司法院的體制內，擔任類似書類審查委員的職務等等，結果，也是呂太郎秘書長開會時當面告知，司法院本身已有的建制，並沒有實現副院長提議的空間，蔡炯燉副院長連續兩次踢到鐵板之後，才開始減少野心。</p><p>加上，蔡炯燉急於表現，一上任大法官就撰寫釋憲文章，給自己鬧了笑話，也就更加節制了。三國關係永遠分分合合，不足為奇，表面上看，許宗力和西涼軍團是存有矛盾，但是，這種矛盾並非永遠如此。例如：許宗力是反對陪審團制度的，他認為在台灣推動「陪審團」，就像在沙漠種玫瑰，雖然此話引來不少反對聲浪，但，司改國是會議籌備委員會副召集人瞿海源就公開呼應許宗力的反對立場，瞿說「不可能馬上就通過陪審，那整個就大地震了」，他預判很難會通過陪審辦法。瞿海源接受廣播專訪說，陪審、參審的議題，放在國是會議第四分組會議討論；過去民間司改會，甚至司法院都曾舉辦過很多研討會，討論很久，沒有定論；從民調來看，民意也沒有顯示出支持陪審制的人較多。有關民調數字，瞿的說法不實在。但從此也可看出，瞿寧可說話不實，也要力挺許宗力反對陪審團的立場則是明確的。瞿海源還說，很多人是從電影看到陪審制，但執行陪審制的國家比較少；陪審制與台灣現有的司法體制吻合度很低，「那變成是革命了」。</p><p>言下之意，台灣司法並不需要革命就能改善，這一點也是和國人的阿計有相當的落差。國人面對司法不公，殷殷期盼的就是政黨輪替之後，可以來一場有如革命般的司法改革。看來，許宗力和瞿海源就推動「陪審制」議題，是已經站在同一戰線，明顯打算聯手封殺陪審制，國是改革會議第四組的主持人許玉秀，應該是用來「誘蛇出洞」，讓張靜律師在該組大鳴大放之後，再以全組表決不通過，封殺陪審制。就陪審團議案來看，「英宗中樞」和「西涼軍團」是分分合合，隨時會有變化的。</p><p>也正因為這種分分合合的不穩定性，對於多年來浸淫司法官場且一路升官的呂太郎而言，他就必須自謀出路。</p><p>邱太三、呂太郎 結盟新勢力</p><p>秘書長呂太郎和法務部長邱太三，兩人都是深厚的「台中」地緣，有人戲稱他們兩人是「台中幫」，1993年12月，台中地院303室的法官林志忠、呂太郎、林輝煌、陳漢洲等人召開記者會，要求事務分配回歸法官會議，開了「法官自治運動」的第一槍。邱太三則是在台中地區參選，現算是司法台中幫的龍頭。</p><p>有人認為，「雙太合體」是面對「西涼軍團」強勢主導司法權力之下，不得不的結合，因為呂太郎不願意成為「司法三公」（院長、副院長、秘書長）的「孤鳥」，但是，又打不進「英宗中樞」或是「西涼軍團」的任何一方，所以，一定要開發自己的地盤，那就是「雙太合體」最為實際且實用。</p><p>而「雙太合體」這種結合，對邱太三而言，也是美事一樁，不久前，邱太三特別安排政次陳明堂，代表法務部負責和司法院擔任「對口單位」，院方看到邱太三的主張，也就指定副秘書長林勤純做為對口人選，陳明堂為了建立對口交情，還特別安排了總長顏大和以及多位法務部主管和林勤純一起吃飯。其實，如果了解「雙太合體」之情勢，就可以了解，陳明堂和林勤純的對口單位「安排」根本就是表面假象。院檢之間的「真正對口」，根本的是「秘書長」和「部長」兩人之間的隨時順暢熱線。</p><p>我國司法「三國演義」的正式成形與登場之第一齣大戲演出，應該就屬司法改革國是會議，這場大戲的巧妙演出，也可以看出三國關係的微妙互動與變化。法治時報封面故事</p><p>評論屬投書者個人言論，不代表本刊立場。</p> #法治時報 #其他 #議事程序 #新頭殼 #2017-03-25
 
 # 黃致豪
 ## backgrounds
@@ -2884,7 +2884,7 @@ ___
 <p>
 2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
-<p>本投書整理更新時間：2017年04月01日 09:47:14</p>
+<p>本投書整理更新時間：2017年04月01日 12:23:07</p>
 <ul>
   <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
   <li><a href="http://fb.com/jrf.tw" target="_blank">民間司改會粉專</a></li>
@@ -3106,6 +3106,7 @@ ___
   - 中國時報
   - 新頭殼
   - ETToday東森新聞雲
+  - 民報
   - 端傳媒
   - 報導者
   - 民間司改會
